# geomath-java-demo

./: .gitignore  README.md  pom.xml  pyproject.toml
geomath/: __init__.py  polygon_utils.py  vector2d.py
src/main/java/com/example/geomath/: PolygonUtils.java  Vector2D.java
src/test/java/com/example/geomath/: PolygonUtilsTest.java  Vector2DTest.java
tests/: test_polygon_utils.py  test_vector2d.py
